@@ -53,7 +53,7 @@ public:
     QPixmap* imageAtIndex(size_t index) const;
     virtual bool supportsAlpha() const;
     int duration(size_t index) const;
-    QString imageFormat() const;
+    virtual String filenameExtension() const;
 
     void clearFrame(size_t index);
 
